--- a/app/globals.css
+++ b/app/globals.css
@@ -89,6 +89,14 @@ body {
   }
 }
 
+@keyframes ray {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(100%);
+  }
+}
 
 @layer base {
   :root {
